--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,93 @@
+#root {
+  font-family: "IBM Plex Sans";
+}
+.App {
+  background-color: #f3f5f5;
+}
+.container {
+  max-width: 1200px;
+  margin: auto;
+}
 header {
   border-bottom: 1px solid lightgrey;
   padding: 10px;
+  background-color: white;
 }
 header img {
-  width: 200px;
+  width: 155px;
 }
-.top-section-img{
-  width: 500px;
+.logo-section {
+  max-width: 1200px;
+  margin: auto;
+}
+.body {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.white-bg {
+  background-color: white;
+}
+.top-section {
+  display: flex;
+  color: #868a8a;
+  font-size: 19px;
+  padding: 40px 0px;
+  background-color: white;
+}
+.description {
+  padding: 10px;
+}
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+  color: #2e3333;
+  margin: 20px 0px;
+}
+h2 {
+  font-size: 18px;
+  color: #2e3333;
+  margin: 10px 0px;
+}
+.top-section-img {
+  width: 400px;
+  border-radius: 10px;
+}
+.menu-img {
+  width: 130px;
+  height: 130px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.basket {
+  background-color: aqua;
+}
+.meals {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  width: 90%;
+}
+.options {
+  display: flex;
+  flex-direction: column;
+}
+.menu-container {
+  width: 40%;
+  color: #868a8a;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+}
+
+p {
+  line-height: 25px;
+}
+.food-caption {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
 }
